--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "experiments/lidc_exp/lung-segmentation"]
 	path = experiments/lidc_exp/lung-segmentation
-	url = https://mdt-pslc:xPFCCRtXiRpDLz64q1X-@gitlab.com/PSLC/ia-medical/lung-segmentation
+	url = https://mdt-pslc:xPFCCRtXiRpDLz64q1X-@gitlab.com/PSLC/ia-medical/lung-segmentation.git
